feat: add custom exceptions and global exception handler